# napari-subboxer

./: LICENSE  README.md  axis-rotation-example.py  debug.py  interactive_axis_update.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
napari_subboxer/: __init__.py  cli.py  data_model.py  eralda.py  interactivity_utils.py  layer_utils.py  oriented_points_controls.py  plane_controls.py  points_controls.py  pose_io.py  subboxer.py
napari_subboxer/_qt/: label_between_arrows.py  named_labeled_slider.py  open_close_buttons.py  selectable_button_list.py  subboxing_widget.py  typing.py  utils.py
napari_subboxer/_qt/tests/: test_label_between_arrows.py  test_open_close_widget.py  test_selectable_button_list.py
